--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,33 @@ urllib3==1.25.8
 vine==1.3.0
 WeasyPrint==51
 webencodings==0.5.1
+amqp==2.5.2
+asgiref==3.2.3
+billiard==3.6.2.0
+cairocffi==1.1.0
+CairoSVG==2.4.2
+celery==4.4.0
+certifi==2019.11.28
+cffi==1.13.2
+chardet==3.0.4
+cssselect2==0.2.2
+defusedxml==0.6.0
+Django==3.0.2
+django-paypal==1.0.0
+html5lib==1.0.1
+idna==2.8
+kombu==4.6.7
+Pillow==7.0.0
+pycodestyle==2.5.0
+pycparser==2.19
+Pyphen==0.9.5
+pytz==2019.3
+redis==3.4.1
+requests==2.22.0
+six==1.14.0
+sqlparse==0.3.0
+tinycss2==1.0.2
+urllib3==1.25.8
+vine==1.3.0
+WeasyPrint==51
+webencodings==0.5.1
